crates/parser/tests/cases/snapshots/cases__errors__self_struct.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(self_struct), module::parse_module, \"struct self {}\")"

---
error: failed to parse struct definition
  ┌─ self_struct:1:8
  │
1 │ struct self {}
  │        ^^^^ expected a name, found keyword `self`
  │
  = Note: a struct name must start with a letter or underscore, and contain letters, numbers, or underscores


